week9/docker-kubernetes-helm/containerisation/k8s/monitoring/pet-clinic-sample-app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: pet-clinic-app-deployment
  labels:
    app: pet-clinic-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pet-clinic-app
  template:
    metadata:
      labels:
        app: pet-clinic-app
    spec:
      containers:
      - name: pet-clinic-app
        image: arey/springboot-petclinic:2.1.3
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "10Mi"
            cpu: "10m"
          limits:
            memory: "50Mi"
            cpu: "20m"
