week9/docker-kubernetes-helm/containerisation/k8s/monitoring/pet-clinic-sample-app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: pet-clinic-app-service
  labels:
    app: pet-clinic-app
spec:
  selector:
    app: pet-clinic-app
  ports:
    - name: web
      port: 8080
      protocol: TCP
